# keendreams

./: CMakeLists.txt  README.md  audiokdr.h  gelib.c  gelib.h  graphkdr.h  icon.c  id_ca.c  id_ca.h  id_heads.h  id_in.c  id_in.h  id_mm.c  id_mm.h  id_rf.c  id_rf.h  id_rf_a.c  id_sd.c  id_sd.h  id_us.c  id_us.h  id_us_a.c  id_vw.c  id_vw.h  id_vw_a.c  id_vw_ae.c  id_vw_conv.c  id_vw_gl.c  jam_io.c  jam_io.h  kd_act1.c  kd_act2.c  kd_compat.c  kd_def.h  kd_demo.c  kd_keen.c  kd_main.c  kd_play.c  kd_stat.c  kd_stat.h  (+8 more)
rsrc/: pad_dpad_down_input.xpm
sounds/: amused.c  jhuff.c
